stopped horizontal scrolling

--- a/css/index.styles.css
+++ b/css/index.styles.css
@@ -23,6 +23,11 @@ html {
   scroll-behavior: smooth;
 }
 
+body, html {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 a {
   text-decoration: none;
   color: black;
